Step3.1: Each flexbox gets color, 0-600px settings set up

--- a/style.css
+++ b/style.css
@@ -1,6 +1,40 @@
+/*General Settings*/
+* {
+    padding: 0;
+    margin: 0;
+}
 body {
     display: flex;
+    flex-direction: column;
 }
+
+section {
+    height: 100px;
+}
+
+
+.one {
+    background-color: rgb(0, 0, 0);
+}
+.two {
+    background-color: rgb(50, 50, 50);
+}
+.three {
+    background-color: rgb(100, 100, 100);
+}
+.four {
+    background-color: rgb(150, 150, 150);
+}
+.five {
+    background-color: rgb(200, 200, 200);
+}
+.six {
+    background-color: rgb(250, 250,0);
+}
+.seven {
+    background-color: rgb(250, 0, 250);
+}
+
 
 @media (min-width: 601px) {}
 
